--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -4,18 +4,10 @@
 <h2>Ingredients</h2>
 
 <ul class="list-group">
-  <% @cocktail.ingredients.each do |ingredient| %>
-    <li class="list-group-item"><%= ingredient.name %></li>
-  <% end %>
-</ul>
-
-<h2>Doses</h2>
-
-<ul class="list-group">
   <% @cocktail.doses.each do |dose| %>
-    <li class="list-group-item"><%= dose.description %>
+    <li class="list-group-item"><%= dose.description %><%= dose.ingredient.name %>
       <%= link_to "Remove",
-                  cocktail_dose_path(@cocktail),
+                  dose_path(dose),
                   method: :delete,
                   data: { confirm: "Are you sure?" } %>
     </li></li>
