before destroy ingredients

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -10,6 +10,9 @@
 <div>
   <ul class="cards">
     <% @cocktails.each do |cocktail| %>
+      <% if cocktail.photo.attached? %>
+        <%= cl_image_tag cocktail.photo.key, height: 300, width: 400, crop: :fill %>
+      <% end %>
       <li class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)"><%= link_to cocktail.name, cocktail_path(cocktail) %></li>
     <% end %>
   </ul>
