--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,19 +1,22 @@
 <h1><%= @cocktail.name %></h1>
-
+<% if @cocktail.photo.attached? %>
+<%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
+<% end %>
 
 <h2>Ingredients</h2>
 
 <ul class="list-group">
   <% @cocktail.doses.each do |dose| %>
-    <li class="list-group-item"><%= dose.description %><%= dose.ingredient.name %>
+    <li class="list-group-item"><%= dose.description %> - <%= dose.ingredient.name %>
       <%= link_to "Remove",
                   dose_path(dose),
                   method: :delete,
                   data: { confirm: "Are you sure?" } %>
-    </li></li>
+    </li>
   <% end %>
 </ul>
 
 <%= link_to "Go Back to HomePage", cocktails_path %>
 <br>
 <%= link_to "+ Add doses", new_cocktail_dose_path(@cocktail) %>
+
