--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2016/11/23/14/49/alcohol-1853327_960_720.jpg);>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2016/11/23/14/49/alcohol-1853327_960_720.jpg);">
   <div class="container">
     <h1><strong> Cocktails</strong> to <strong>creative people</strong>!</h1>
     <p>Change your covid life, make cocktails</p>
@@ -7,15 +7,15 @@
   </div>
 </div>
 
+
+
 <div>
   <ul class="cards">
     <% @cocktails.each do |cocktail| %>
-      <% if cocktail.photo.attached? %>
-        <%= cl_image_tag cocktail.photo.key, height: 300, width: 400, crop: :fill %>
-      <% end %>
-      <li class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)"><%= link_to cocktail.name, cocktail_path(cocktail) %></li>
+      <li class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path cocktail.photo.key, height: 300, width: 500, crop: :fill %>)"><%= link_to cocktail.name, cocktail_path(cocktail) %></li>
     <% end %>
   </ul>
 
 </div>
+
 
