--- a/app/assets/stylesheets/components/_cards_grid.scss
+++ b/app/assets/stylesheets/components/_cards_grid.scss
@@ -1,7 +1,7 @@
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
+  grid-gap: 16px 16px;
   padding-top: 32px;
 }
 
