--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,7 +1,14 @@
-<h1>Add a Cocktail</h1>
-
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://blog.ubaldi.com/wp-content/uploads/2019/05/cocktails-blender-1240x503.jpg);">
+  <div class="container">
+    <h1><strong> Add a Cocktail</strong>!</h1>
+    <p>Enjoy yourself</p>
+    <%= link_to "Go back HOME", root_path, class: "btn-ghost" %>
+  </div>
+</div>
+<div class="container">
 <%= simple_form_for [ @cocktail ] do |f| %>
   <%= f.input :name %>
   <%= f.input :photo, as: :file %>
-  <%= f.submit "Submit Cocktail", class: "btn btn-primary" %>
+  <%= f.submit "Submit Cocktail", class: "btn-ghost" %>
 <% end %>
+</div>
