--- a/app/assets/stylesheets/components/_cards_grid.scss
+++ b/app/assets/stylesheets/components/_cards_grid.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px 16px;
-  padding-top: 32px;
+  padding: 32px 32px;
 }
 
 .card-category{
